<resources>
    <string name="app_name">Coffee Journal</string>
    <string name="coffee_title_new">New Coffee Log</string>
    <string name="coffee_title_update">Update Coffee Log</string>
    <string name="select_coffee_log">Select Coffee Log to view</string>
    <string name="id_header">ID:</string>
    <string name="name_header">Name:</string>
    <string name="roaster_header">Roaster:</string>
    <string name="country_header">Country:</string>
    <string name="textview">TextView</string>
    <string name="create_new_coffee_log">Create New Coffee Log</string>
    <string name="sweet">Sweet</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="sour">Sour</string>
    <string name="floral">Floral</string>
    <string name="new_coffee_log">New Coffee Log</string>
    <string name="breakfast_coffee">Breakfast Coffee</string>
    <string name="starbucks">Starbucks</string>
    <string name="mexico_city">Mexico City</string>
    <string name="mexico">Mexico</string>
    <string name="city_region">City/Region</string>
    <string name="country">Country</string>
    <string name="brew_method">Brew Method</string>
    <string name="drip">Drip</string>
    <string name="espresso">Espresso</string>
    <string name="pour_over">Pour Over</string>
    <string name="press">Press</string>
    <string name="aeropress">Aeropress</string>
    <string name="siphon">Siphon</string>
    <string name="date_example1">1/31/15</string>
    <string name="roast_date">Roast Date</string>
    <string name="date_example2">1/1/15</string>
    <string name="brew_date">Brew Date</string>
    <string name="hint_coffee_grams">4.5</string>
    <string name="coffee_grams">Coffee Grams</string>
    <string name="hint_water_grams">4.5</string>
    <string name="water_grams">Water Grams</string>
    <string name="overall">Overall</string>
    <string name="notes_example">HERE ARE MY NOTES</string>
    <string name="spicy">Spicy</string>
    <string name="salty">Salty</string>
    <string name="berry">Berry</string>
    <string name="citrus">Citrus</string>
    <string name="store_fruit">StoreFruit</string>
    <string name="chocolate">Chocolate</string>
    <string name="caramel">Caramel</string>
    <string name="smokey">Smokey</string>
    <string name="bitter">Bitter</string>
    <string name="savory">Savory</string>
    <string name="body">Body</string>
    <string name="clean">Clean</string>
    <string name="finish">Finish</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_volley">Coffee Images</string>
    <string name="title_activity_maps">Coffee Map</string>
    <string name="title_activity_recycler_save_view">Coffee Firebase</string>

    <string name="google_maps_key">AIzaSyA4GG9WSteaYrynjc3eb4K9Asm6gfZSX_A</string>

    <string-array name="countries_array">
        <item>Brazil</item>
        <item>Vietnam</item>
        <item>Colombia</item>
        <item>Indonesia</item>
        <item>Ethiopia</item>
        <item>India</item>
        <item>Mexico</item>
        <item>Guatemala</item>
        <item>Peru</item>
        <item>Honduras</item>
        <item>Uganda</item>
        <item>Ivory Coast</item>
        <item>Costa Rica</item>
        <item>El Salvador</item>
        <item>Nicaragua</item>
        <item>Papua New Guinea</item>
        <item>Ecuador</item>
        <item>Thailand</item>
        <item>Tanzania</item>
        <item>Dominican Republic</item>
        <item>Kenya</item>
        <item>Venezuela</item>
        <item>Cameroon</item>
        <item>Philippines</item>
        <item>Democratic Republic of the Congo</item>
        <item>Burundi</item>
        <item>Madagascar</item>
        <item>Haiti</item>
        <item>Rwanda</item>
        <item>Guinea</item>
        <item>Cuba</item>
        <item>Togo</item>
        <item>Bolivia</item>
        <item>Zambia</item>
        <item>Angola</item>
        <item>Central African Republic</item>
        <item>Panama</item>
        <item>Zimbabwe</item>
        <item>United States</item>
        <item>Nigeria</item>
        <item>Ghana</item>
        <item>Jamaica</item>
        <item>Sri Lanka</item>
        <item>Malawi</item>
        <item>Paraguay</item>
        <item>Sierra Leone</item>
        <item>Australia</item>
        <item>Trinidad and Tobago</item>
        <item>Nepal</item>
        <item>Republic of the Congo</item>
        <item>Equatorial Guinea</item>
        <item>Gabon</item>
        <item>Benin</item>
    </string-array>
    <string name="wi_day_cloudy_gusts">&#xf000;</string>
    <string name="wi_day_cloudy_windy">&#xf001;</string>
    <string name="wi_day_cloudy">&#xf002;</string>
    <string name="wi_day_fog">&#xf003;</string>
    <string name="wi_day_hail">&#xf004;</string>
    <string name="wi_day_lightning">&#xf005;</string>
    <string name="wi_day_rain_mix">&#xf006;</string>
    <string name="wi_day_rain_wind">&#xf007;</string>
    <string name="wi_day_rain">&#xf008;</string>
    <string name="wi_day_showers">&#xf009;</string>
    <string name="wi_day_snow">&#xf00a;</string>
    <string name="wi_day_sprinkle">&#xf00b;</string>
    <string name="wi_day_sunny_overcast">&#xf00c;</string>
    <string name="wi_day_sunny">&#xf00d;</string>
    <string name="wi_day_storm_showers">&#xf00e;</string>
    <string name="wi_day_thunderstorm">&#xf010;</string>
    <string name="wi_cloudy_gusts">&#xf011;</string>
    <string name="wi_cloudy_windy">&#xf012;</string>
    <string name="wi_cloudy">&#xf013;</string>
    <string name="wi_fog">&#xf014;</string>
    <string name="wi_hail">&#xf015;</string>
    <string name="wi_lightning">&#xf016;</string>
    <string name="wi_rain_mix">&#xf017;</string>
    <string name="wi_rain_wind">&#xf018;</string>
    <string name="wi_rain">&#xf019;</string>
    <string name="wi_showers">&#xf01a;</string>
    <string name="wi_snow">&#xf01b;</string>
    <string name="wi_sprinkle">&#xf01c;</string>
    <string name="wi_storm_showers">&#xf01d;</string>
    <string name="wi_thunderstorm">&#xf01e;</string>
    <string name="wi_windy">&#xf021;</string>
    <string name="wi_night_alt_cloudy_gusts">&#xf022;</string>
    <string name="wi_night_alt_cloudy_windy">&#xf023;</string>
    <string name="wi_night_alt_hail">&#xf024;</string>
    <string name="wi_night_alt_lightning">&#xf025;</string>
    <string name="wi_night_alt_rain_mix">&#xf026;</string>
    <string name="wi_night_alt_rain_wind">&#xf027;</string>
    <string name="wi_night_alt_rain">&#xf028;</string>
    <string name="wi_night_alt_showers">&#xf029;</string>
    <string name="wi_night_alt_snow">&#xf02a;</string>
    <string name="wi_night_alt_sprinkle">&#xf02b;</string>
    <string name="wi_night_alt_storm_showers">&#xf02c;</string>
    <string name="wi_night_alt_thunderstorm">&#xf02d;</string>
    <string name="wi_night_clear">&#xf02e;</string>
    <string name="wi_night_cloudy_gusts">&#xf02f;</string>
    <string name="wi_night_cloudy_windy">&#xf030;</string>
    <string name="wi_night_cloudy">&#xf031;</string>
    <string name="wi_night_hail">&#xf032;</string>
    <string name="wi_night_lightning">&#xf033;</string>
    <string name="wi_night_rain_mix">&#xf034;</string>
    <string name="wi_night_rain_wind">&#xf035;</string>
    <string name="wi_night_rain">&#xf036;</string>
    <string name="wi_night_showers">&#xf037;</string>
    <string name="wi_night_snow">&#xf038;</string>
    <string name="wi_night_sprinkle">&#xf039;</string>
    <string name="wi_night_storm_showers">&#xf03a;</string>
    <string name="wi_night_thunderstorm">&#xf03b;</string>
    <string name="wi_celsius">&#xf03c;</string>
    <string name="wi_cloud_down">&#xf03d;</string>
    <string name="wi_cloud_refresh">&#xf03e;</string>
    <string name="wi_cloud_up">&#xf040;</string>
    <string name="wi_cloud">&#xf041;</string>
    <string name="wi_degrees">&#xf042;</string>
    <string name="wi_down_left">&#xf043;</string>
    <string name="wi_down">&#xf044;</string>
    <string name="wi_fahrenheit">&#xf045;</string>
    <string name="wi_horizon_alt">&#xf046;</string>
    <string name="wi_horizon">&#xf047;</string>
    <string name="wi_left">&#xf048;</string>
    <string name="wi_night_fog">&#xf04a;</string>
    <string name="wi_refresh_alt">&#xf04b;</string>
    <string name="wi_refresh">&#xf04c;</string>
    <string name="wi_right">&#xf04d;</string>
    <string name="wi_sprinkles">&#xf04e;</string>
    <string name="wi_strong_wind">&#xf050;</string>
    <string name="wi_sunrise">&#xf051;</string>
    <string name="wi_sunset">&#xf052;</string>
    <string name="wi_thermometer_exterior">&#xf053;</string>
    <string name="wi_thermometer_internal">&#xf054;</string>
    <string name="wi_thermometer">&#xf055;</string>
    <string name="wi_tornado">&#xf056;</string>
    <string name="wi_up_right">&#xf057;</string>
    <string name="wi_up">&#xf058;</string>
    <string name="wi_wind_west">&#xf059;</string>
    <string name="wi_wind_south_west">&#xf05a;</string>
    <string name="wi_wind_south_east">&#xf05b;</string>
    <string name="wi_wind_south">&#xf05c;</string>
    <string name="wi_wind_north_west">&#xf05d;</string>
    <string name="wi_wind_north_east">&#xf05e;</string>
    <string name="wi_wind_north">&#xf060;</string>
    <string name="wi_wind_east">&#xf061;</string>
    <string name="wi_smoke">&#xf062;</string>
    <string name="wi_dust">&#xf063;</string>
    <string name="wi_snow_wind">&#xf064;</string>
    <string name="wi_day_snow_wind">&#xf065;</string>
    <string name="wi_night_snow_wind">&#xf066;</string>
    <string name="wi_night_alt_snow_wind">&#xf067;</string>
    <string name="wi_day_sleet_storm">&#xf068;</string>
    <string name="wi_night_sleet_storm">&#xf069;</string>
    <string name="wi_night_alt_sleet_storm">&#xf06a;</string>
    <string name="wi_day_snow_thunderstorm">&#xf06b;</string>
    <string name="wi_night_snow_thunderstorm">&#xf06c;</string>
    <string name="wi_night_alt_snow_thunderstorm">&#xf06d;</string>
    <string name="wi_solar_eclipse">&#xf06e;</string>
    <string name="wi_lunar_eclipse">&#xf070;</string>
    <string name="wi_meteor">&#xf071;</string>
    <string name="wi_hot">&#xf072;</string>
    <string name="wi_hurricane">&#xf073;</string>
    <string name="wi_smog">&#xf074;</string>
    <string name="wi_alien">&#xf075;</string>
    <string name="wi_snowflake_cold">&#xf076;</string>
    <string name="wi_stars">&#xf077;</string>
    <string name="wi_moon_full">&#xf078;</string>
    <string name="wi_moon_waxing_gibbous">&#xf079;</string>
    <string name="wi_moon_waxing_quarter">&#xf07a;</string>
    <string name="wi_moon_waxing_crescent">&#xf07b;</string>
    <string name="wi_moon_young">&#xf07c;</string>
    <string name="wi_moon_new">&#xf07d;</string>
    <string name="wi_moon_old">&#xf07e;</string>
    <string name="wi_moon_waning_crescent">&#xf080;</string>
    <string name="wi_moon_waning_quarter">&#xf081;</string>
    <string name="wi_moon_waning_gibbous">&#xf082;</string>
    <string name="wi_night_partly_cloudy">&#xf083;</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_recycler_view">Coffee Images</string>

</resources>
